[tool.poetry]
name = "pybookkeeper"
version = "0.1.0"
description = "Python app to manage your personal finances"
authors = ["Anatoly Chistov <atchistov@gmail.com>", "LXDMIPT Group"]
license = "MIT"
readme = "README.md"
packages = [{include = "bookkeeper"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
pylint = "^2.15.10"
flake8 = "^6.0.0"
mccabe = "^0.7.0"
# FIXME: pyside не устанавливается корректно с помощью poetry
'''
The current project's supported Python range (>=3.11,<4.0) is not compatible with some of the required packages Python requirement:
  - pyside6 requires Python <3.13,>=3.8, so it will not be satisfied for Python >=3.13,<4.0

Because no versions of pyside6 match >6.6.3,<7.0.0
 and pyside6 (6.6.3) requires Python <3.13,>=3.8, pyside6 is forbidden.
So, because bookkeeper depends on pyside6 (^6.6.3), version solving failed.

  • Check your dependencies Python requirement: The Python requirement can be specified via the `python` or `markers` properties

    For pyside6, a possible solution would be to set the `python` property to ">=3.11,<3.13"
'''
pyside6 = "^6.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
